<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<groupId>org.sunbird</groupId>
	<artifactId>lms-service</artifactId>
	<name>lms-service</name>
	<packaging>play2</packaging>
	<version>1.0-SNAPSHOT</version>
	<modelVersion>4.0.0</modelVersion>
	<repositories>
		<repository>
			<id>central</id>
			<name>Maven Central</name>
			<url>https://repo1.maven.org/maven2/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>typesafe-releases-plugins</id>
			<url>https://repo.typesafe.com/typesafe/releases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<properties>
		<play2.version>3.0.5</play2.version>
		<play2.plugin.version>1.0.0-rc5</play2.plugin.version>
		<scala.major.version>2.13</scala.major.version>
		<scala.version>2.13.12</scala.version>
		<pekko.version>1.0.2</pekko.version>
		<pekko-http.version>1.0.1</pekko-http.version>
		<jackson.version>2.14.3</jackson.version>
		<logstash-logback-encoder.version>7.3</logstash-logback-encoder.version>
		<powermock.version>2.0.9</powermock.version>
		<jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
	</properties>

	<dependencies>
		<!-- Don't move this dependency below play dependency otherwise it will 
			be overriden by play jackson jar, which uses older version -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<!-- Jackson Scala module for Scala 2.13 compatibility -->
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-scala_${scala.major.version}</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.playframework</groupId>
			<artifactId>play-guice_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.inject</groupId>
					<artifactId>guice</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.inject.extensions</groupId>
		    		<artifactId>guice-assistedinject</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>5.1.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.inject.extensions/guice-assistedinject -->
		<dependency>
		    <groupId>com.google.inject.extensions</groupId>
		    <artifactId>guice-assistedinject</artifactId>
		    <version>5.1.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.playframework</groupId>
			<artifactId>play-netty-server_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
			<scope>runtime</scope>
			<exclusions>
				<exclusion>
					<groupId>io.netty</groupId>
					<artifactId>netty-codec-http</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-codec-http</artifactId>
			<version>4.1.44.Final</version>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>io.netty</groupId>-->
<!--			<artifactId>netty-common</artifactId>-->
<!--			<version>4.1.77.Final</version>-->
<!--		</dependency>-->
		<!-- Add actor here itself to avoid netty jar conflict. -->
		<dependency>
            <groupId>org.sunbird</groupId>
            <artifactId>course-actors-common</artifactId>
            <version>1.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<artifactId>cassandra-unit</artifactId>
					<groupId>org.cassandraunit</groupId>
				</exclusion>
			</exclusions>
		</dependency>
        <dependency>
            <groupId>org.sunbird</groupId>
            <artifactId>course-actors</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
		<dependency>
			<groupId>org.sunbird</groupId>
			<artifactId>enrolment-actor</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.sunbird</groupId>
			<artifactId>sunbird-commons</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe</groupId>
			<artifactId>config</artifactId>
			<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.playframework</groupId>
			<artifactId>play_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.fasterxml.jackson.core</groupId>
					<artifactId>jackson-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>joda-time</groupId>
					<artifactId>joda-time</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.playframework</groupId>
			<artifactId>play-filters-helpers_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.playframework</groupId>
			<artifactId>play-pekko-http-server_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.playframework</groupId>
			<artifactId>play-specs2_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.google.code.gson</groupId>
					<artifactId>gson</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
				<exclusion>
					<artifactId>byte-buddy</artifactId>
					<groupId>net.bytebuddy</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.playframework</groupId>
			<artifactId>play-logback_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.pekko</groupId>
			<artifactId>pekko-testkit_${scala.major.version}</artifactId>
			<version>${pekko.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito2</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.danielwegener</groupId>
			<artifactId>logback-kafka-appender</artifactId>
			<version>0.2.0-RC2</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.14</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>1.4.14</version>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>${logstash-logback-encoder.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.9</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>${basedir}/app</sourceDirectory>
		<testSourceDirectory>${basedir}/test</testSourceDirectory>
		<resources>
			<resource>
				<directory>${basedir}/conf</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.code.play2-maven-plugin</groupId>
				<artifactId>play2-maven-plugin</artifactId>
				<version>${play2.plugin.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
					<argLine>
						--illegal-access=warn
					</argLine>
					<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
					<includes>
						<include>**/*Spec.java</include>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<configuration>
					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>

